Added title to visualization.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Soles</title>
+	<title>Soles. Grupos de trabajo #acampadasol</title>
 	<link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
